--- a/workshop/0_who_am_i.ipynb
+++ b/workshop/0_who_am_i.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "source": [
     "\n",
-    "# ¡Hola, soy Manuel Espinosa!\n",
+    "# ¡Hola, soy Manuel!\n",
     "\n",
-    "## ¿Quien soy?\n",
+    "## ¿Quién soy?\n",
     "\n",
     "- 👨‍🎓 &nbsp; Estudiante de la Ingeniería en Sistemas Computacionales\n",
     "- 🏫 &nbsp; Tecnológico de Estudios Superiores de Chalco &nbsp; 🇲x\n",
-    "- 🏋️‍♂️ &nbsp; Certificación en algoritmos y estructura de datos en Javascript por freeCodeCamp\n",
+    "- 🏋️‍♂️ &nbsp; Certificación en algoritmos y estructuras de datos en Javascript por freeCodeCamp\n",
     "- 📜 &nbsp; Certificación en diseño web responsivo por freeCodeCamp \n",
     "- 📜 &nbsp; Realidad Aumentada con WebXR y Three.js por WebXR Academy\n",
     "\n",
@@ -47,11 +47,10 @@
     "</div>\n",
     "<br>\n",
     "<h3>Redes</h3>\n",
-    "<i><svg xmlns=\"http://www.w3.org/2000/svg\" height=\"1em\" viewBox=\"0 0 576 512\"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ff0000}</style><path d=\"M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z\"/></svg></i>\n",
-    "🧗‍♂ &nbsp; I still learning a lot of cool software developing stuff! <br>\n",
-    "🎯 &nbsp; Become a FullStack Developer is my goal!<br>\n",
+    "<i><svg xmlns=\"http://www.w3.org/2000/svg\" height=\"1em\" viewBox=\"0 0 576 512\"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ff0000}</style><path d=\"M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z\"/></svg></i>  beginToCode<br>\n",
+    "<i><svg xmlns=\"http://www.w3.org/2000/svg\" height=\"1em\" viewBox=\"0 0 448 512\"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#e1e3ef}</style><path d=\"M448,209.91a210.06,210.06,0,0,1-122.77-39.25V349.38A162.55,162.55,0,1,1,185,188.31V278.2a74.62,74.62,0,1,0,52.23,71.18V0l88,0a121.18,121.18,0,0,0,1.86,22.17h0A122.18,122.18,0,0,0,381,102.39a121.43,121.43,0,0,0,67,20.14Z\"/></svg></i>  beginToCode\n",
     "\n",
-    "<h2>Contact Me!</h2>\n",
+    "<h2>Contacto</h2>\n",
     "💌 &nbsp; jose_el@tesch.edu.mx\n",
     "  \n",
     "\n",
