--- a/workshop/0_who_am_i.ipynb
+++ b/workshop/0_who_am_i.ipynb
@@ -59,6 +59,14 @@
     " \n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://127.0.0.1:8888/?token=d41633f6f9c3c47ecb616c5cea9fca0f50ad0efd20886b6b"
+   ]
   }
  ],
  "metadata": {
