--- a/workshop/7_objects.ipynb
+++ b/workshop/7_objects.ipynb
@@ -11,12 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "const person = {\n",
@@ -39,13 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "\n",
     "console.log(person.name);\n",
@@ -66,13 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "\n",
     "console.log(person[\"age\"]);\n",
@@ -93,13 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New York\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "const propertyName = \"city\";\n",
     "console.log(person[propertyName]);\n",
@@ -121,13 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "\n",
     "person.age = 35;\n",
@@ -148,13 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Male\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "person.gender = \"Male\";\n",
     "console.log(person.gender);\n",
@@ -174,13 +190,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "undefined\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "\n",
     "delete person.city;\n",
@@ -203,13 +223,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "false\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "\n",
     "console.log(\"name\" in person);\n",
@@ -232,13 +257,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "London\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "\n",
     "const student = {\n",
@@ -265,8 +294,16 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "JavaScript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
+  },
   "language_info": {
-   "name": "python"
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "12.22.9"
   },
   "orig_nbformat": 4
  },
