--- a/workshop/8_arrays_loops.ipynb
+++ b/workshop/8_arrays_loops.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -137,28 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "Identifier 'fruits' has already been declared",
-     "output_type": "error",
-     "traceback": [
-      "evalmachine.<anonymous>:1",
-      "const fruits = ['apple', 'banana', 'orange'];",
-      "^",
-      "",
-      "SyntaxError: Identifier 'fruits' has already been declared",
-      "    at evalmachine.<anonymous>:1:1",
-      "    at Script.runInThisContext (vm.js:120:18)",
-      "    at Object.runInThisContext (vm.js:309:38)",
-      "    at run ([eval]:1020:15)",
-      "    at onRunRequest ([eval]:864:18)",
-      "    at onMessage ([eval]:828:13)",
-      "    at process.emit (events.js:314:20)",
-      "    at emit (internal/child_process.js:877:12)",
-      "    at processTicksAndRejections (internal/process/task_queues.js:85:21)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
      ]
     }
    ],
@@ -181,24 +167,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "Identifier 'fruits' has already been declared",
-     "output_type": "error",
-     "traceback": [
-      "evalmachine.<anonymous>:1",
-      "const fruits = ['apple', 'banana'];",
-      "^",
-      "",
-      "SyntaxError: Identifier 'fruits' has already been declared",
-      "    at evalmachine.<anonymous>:1:1",
-      "    at Script.runInThisContext (vm.js:120:18)",
-      "    at Object.runInThisContext (vm.js:309:38)",
-      "    at run ([eval]:1020:15)",
-      "    at onRunRequest ([eval]:864:18)",
-      "    at onMessage ([eval]:828:13)",
-      "    at process.emit (events.js:314:20)",
-      "    at emit (internal/child_process.js:877:12)",
-      "    at processTicksAndRejections (internal/process/task_queues.js:85:21)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 'apple', 'banana', 'orange' ]\n"
      ]
     }
    ],
@@ -220,7 +192,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "orange\n",
+      "[ 'apple', 'banana' ]\n"
+     ]
+    }
+   ],
    "source": [
     " fruits = ['apple', 'banana', 'orange'];\n",
     "const lastFruit = fruits.pop();\n",
@@ -240,7 +221,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "[ 'banana', 'orange' ]\n"
+     ]
+    }
+   ],
    "source": [
     " fruits = ['apple', 'banana', 'orange'];\n",
     "const firstFruit = fruits.shift();\n",
@@ -260,7 +250,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 'apple', 'banana', 'orange' ]\n"
+     ]
+    }
+   ],
    "source": [
     " fruits = ['banana', 'orange'];\n",
     "fruits.unshift('apple');\n",
@@ -311,29 +309,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Assignment to constant variable.",
-     "output_type": "error",
-     "traceback": [
-      "evalmachine.<anonymous>:1",
-      " fruits = [\"apple\", \"banana\", \"orange\", \"mango\"];",
-      "        ^",
-      "",
-      "TypeError: Assignment to constant variable.",
-      "    at evalmachine.<anonymous>:1:9",
-      "    at Script.runInThisContext (vm.js:120:18)",
-      "    at Object.runInThisContext (vm.js:309:38)",
-      "    at run ([eval]:1020:15)",
-      "    at onRunRequest ([eval]:864:18)",
-      "    at onMessage ([eval]:828:13)",
-      "    at process.emit (events.js:314:20)",
-      "    at emit (internal/child_process.js:877:12)",
-      "    at processTicksAndRejections (internal/process/task_queues.js:85:21)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "orange\n",
+      "mango\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
