--- a/workshop/8_arrays_loops.ipynb
+++ b/workshop/8_arrays_loops.ipynb
@@ -16,33 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "Identifier 'arreglo' has already been declared",
-     "output_type": "error",
-     "traceback": [
-      "evalmachine.<anonymous>:1",
-      "const arreglo = [];",
-      "^",
-      "",
-      "SyntaxError: Identifier 'arreglo' has already been declared",
-      "    at evalmachine.<anonymous>:1:1",
-      "    at Script.runInThisContext (vm.js:120:18)",
-      "    at Object.runInThisContext (vm.js:309:38)",
-      "    at run ([eval]:1020:15)",
-      "    at onRunRequest ([eval]:864:18)",
-      "    at onMessage ([eval]:828:13)",
-      "    at process.emit (events.js:314:20)",
-      "    at emit (internal/child_process.js:877:12)",
-      "    at processTicksAndRejections (internal/process/task_queues.js:85:21)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "const arreglo = [];"
+    "const arr = [];"
    ]
   },
   {
@@ -55,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
