--- a/workshop/5_spread_operator.ipynb
+++ b/workshop/5_spread_operator.ipynb
@@ -21,32 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "Identifier 'array1' has already been declared",
-     "output_type": "error",
-     "traceback": [
-      "evalmachine.<anonymous>:1",
-      "const array1 = [1, 2, 3];",
-      "^",
-      "",
-      "SyntaxError: Identifier 'array1' has already been declared",
-      "    at evalmachine.<anonymous>:1:1",
-      "    at Script.runInThisContext (vm.js:120:18)",
-      "    at Object.runInThisContext (vm.js:309:38)",
-      "    at run ([eval]:1020:15)",
-      "    at onRunRequest ([eval]:864:18)",
-      "    at onMessage ([eval]:828:13)",
-      "    at process.emit (events.js:314:20)",
-      "    at emit (internal/child_process.js:877:12)",
-      "    at processTicksAndRejections (internal/process/task_queues.js:85:21)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1, 2, 3 ]\n"
      ]
     }
    ],
@@ -68,12 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -101,12 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -133,12 +107,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -158,15 +128,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "JavaScript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
    "file_extension": ".js",
    "mimetype": "application/javascript",
-   "name": "python",
-   "version": "3.11.3"
+   "name": "javascript",
+   "version": "12.22.9"
   },
   "orig_nbformat": 4
  },
