final detail on 0_who_i_am

--- a/workshop/0_who_am_i.ipynb
+++ b/workshop/0_who_am_i.ipynb
@@ -65,7 +65,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://127.0.0.1:8888/?token=d41633f6f9c3c47ecb616c5cea9fca0f50ad0efd20886b6b"
+    "## ¿De qué va este taller?\n",
+    "\n",
+    "- Fundamentos de JavaScript\n",
+    "- Scope de una variable\n",
+    "- Declaración de variables\n",
+    "- Funciones\n",
+    "- Parametros por default\n",
+    "- Operador Spread\n",
+    "- Template literals\n",
+    "- Objetos\n",
+    "- Arreglos"
    ]
   }
  ],
