javascript operators added

--- a/workshop/2_declaration_operators.ipynb
+++ b/workshop/2_declaration_operators.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -75,6 +76,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -106,6 +108,38 @@
     "Se recomienda utilizar `const` para variables que no necesitan ser reasignadas, y `let` para variables que requieren reasignación. `var` se utiliza raramente en el desarrollo moderno de JavaScript debido a sus peculiaridades de alcance y elevación.\n",
     "\n",
     "Recuerda elegir la declaración de variables adecuada según tu caso de uso específico."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Operadores en JavaScript\n",
+    "\n",
+    "Los operadores en JavaScript son símbolos o palabras clave que permiten realizar operaciones en variables, valores y expresiones. Los operadores se utilizan para realizar cálculos matemáticos, comparaciones, asignaciones y más. A continuación, se presentan algunos de los operadores más comunes en JavaScript:\n",
+    "\n",
+    "### Operadores Aritméticos\n",
+    "- `+` : Suma dos valores o concatena cadenas.\n",
+    "- `-` : Resta un valor de otro.\n",
+    "- `*` : Multiplica dos valores.\n",
+    "- `/` : Divide un valor por otro.\n",
+    "- `%` : Devuelve el resto de la división entera.\n",
+    "- `++`: Incrementa el valor de una variable en 1.\n",
+    "- `--`: Decrementa el valor de una variable en 1.\n",
+    "\n",
+    "### Operadores de Asignación\n",
+    "- `=`: Asigna un valor a una variable.\n",
+    "- `+=`: Suma y asigna el resultado a una variable.\n",
+    "- `-=`: Resta y asigna el resultado a una variable.\n",
+    "- `*=`: Multiplica y asigna el resultado a una variable.\n",
+    "- `/=`: Divide y asigna el resultado a una variable.\n",
+    "- `%=`: Calcula el resto y asigna el resultado a una variable.\n",
+    "\n",
+    "### Operadores Lógicos\n",
+    "- `&&`: Devuelve true si todas las condiciones son verdaderas. (AND)\n",
+    "- `||`: Devuelve true si al menos una de las condiciones es verdadera. (OR)\n",
+    "- `!`: Niega el valor de una expresión."
    ]
   }
  ],
